[package]
name = "gestore_incubatrice_gui"
version = "1.0.0"
edition = "2021"
description = "Gestione incubata di uova"
license = "MIT"
authors = ["Mino Mitrugno <mino.mitrugno@unisalento.it>"]

[features]
desktop = []

# Solo per desktop (non Android) ricorda di rinominare il main.rs 
# [[bin]]
# name = "gestore_incubatrice_gui"
# path = "src/main.rs"
# required-features = ["desktop"]

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
confy = "0.5.1"
eframe = "0.27.2"
rusqlite = { version = "0.31.0", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # <-- AGGIUNGI QUESTA RIGA!

[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.5.2", features = ["native-activity"] }

[package.metadata.rpm]
package = "gestore_incubatrice_gui"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
gestore_incubatrice_gui = { path = "/usr/bin/gestore_incubatrice_gui" }